2010-11-05  Till Kamppeter <till.kamppeter@gmail.com>

	* PPD/Epson/epalm240.ppd, PPD/Epson/epalm241.ppd,
	  PPD/Epson/epalmx20.ppd, PPD/Epson/epalmx21.ppd,
	  printer/Epson-AcuLaser_M2400.xml,
	  printer/Epson-AcuLaser_M2410.xml, printer/Epson-AcuLaser_MX20.xml,
	  printer/Epson-AcuLaser_MX21.xml: Added new PostScript printers
	  from Epson. Thanks to Ray Hsu from Epson for the PPD files.

2010-10-09  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/HP-CP3525n.xml:
	  New entries added to the MySQL database.

2010-10-08  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/opt/126.xml: Fixed default PageSize choice for the
	  "necp2xX.upp" driver. The invalid choice produced broken PPD files
	  (bug #533).

2010-09-27  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Brother-MFC9840CDW.xml,
	  db/source/printer/HP-Photosmart_C309g.xml:
	  New entries added to the MySQL database.

2010-09-15  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/printer/Gestetner-10512.xml,
	  db/source/printer/Gestetner-2212.xml,
	  db/source/printer/Gestetner-2712.xml,
	  db/source/printer/Gestetner-3212.xml,
	  db/source/printer/Gestetner-3502.xml,
	  db/source/printer/Gestetner-3532_4235g.xml,
	  db/source/printer/Gestetner-4502.xml,
	  db/source/printer/Gestetner-4532_4245g.xml,
	  db/source/printer/Gestetner-6002.xml,
	  db/source/printer/Gestetner-7502.xml,
	  db/source/printer/Gestetner-9002.xml,
	  db/source/printer/Gestetner-C7010.xml,
	  db/source/printer/Gestetner-C7116.xml,
	  db/source/printer/Gestetner-C7416.xml,
	  db/source/printer/Gestetner-C7417.xml,
	  db/source/printer/Gestetner-C7425dn.xml,
	  db/source/printer/Gestetner-C7435n.xml,
	  db/source/printer/Gestetner-C7521n.xml,
	  db/source/printer/Gestetner-C7526dn.xml,
	  db/source/printer/Gestetner-C7528n.xml,
	  db/source/printer/Gestetner-C7531dn.xml,
	  db/source/printer/Gestetner-C7535n.xml,
	  db/source/printer/Gestetner-C7640nD.xml,