@@ -23,11 +23,11 @@
   <driver>Postscript-Epson</driver>
   <drivers>
     <driver>
-      <id>Postscript-Epson</id>
-      <ppd>PPD/Epson/epalmx21.ppd</ppd>
+      <id>Postscript</id>
     </driver>
     <driver>
-      <id>Postscript</id>
+      <id>Postscript-Epson</id>
+      <ppd>PPD/Epson/epalmx21.ppd</ppd>
     </driver>
   </drivers>
   <comments>
