@@ -1,3 +1,11 @@
+2010-11-06  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/Epson-AcuLaser_M2400.xml,
+	  db/source/printer/Epson-AcuLaser_M2410.xml,
+	  db/source/printer/Epson-AcuLaser_MX20.xml,
+	  db/source/printer/Epson-AcuLaser_MX21.xml:
+	  Entries modified in the MySQL database.
+
 2010-11-05  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* PPD/Epson/epalm240.ppd, PPD/Epson/epalm241.ppd,
